# L1_POC

./: Cargo.toml  Dockerfile  README.md
core/src/: lib.rs  main.rs  pos.rs
peer-discovery/: Cargo.toml  dockerfile  setup.sh  teardown.sh
peer-discovery/k8s/: deployment-bootstrap-node.yaml  deployment-peer-node.yaml  peer-discovery-deployment.yaml  peer-discovery-service.yaml  role.yaml  rolebinding.yaml  service-bootstrap.yaml  service-peer.yaml
peer-discovery/src/: main.rs  peer.rs  utils.rs
