[package]
name = "peer-discovery"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.100"
chrono = "0.4.30"
tokio = {version = "1.38.0", features = ["full"]}  
warp = "0.3.7"
reqwest = { version = "0.11", features = ["json"] }
kube = { version = "0.64", features = ["runtime"] }
k8s-openapi = { version = "0.13", features = ["v1_21"] } 